apps/app_test/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: lets-encrypt-cluster-issuer
spec:
  tls:
  - secretName: app-tls-secret
    hosts:
      - app-test.blu.bigdataonk8s.com
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello-kubernetes
              port:
                number: 80
      host: app-test.blu.bigdataonk8s.com
